--- a/.gitignore
+++ b/.gitignore
@@ -19,9 +19,13 @@
 .dvi
 *-converted-to.*
 # these rules might exclude image files for figures etc.
- *.ps
- *.eps
- *.pdf
+*.ps
+*.eps
+*.pdf
+!Hardware_and_information_flow.pdf
+!Domain_model.pdf
+!sedes.pdf
+!Use_Case_Diagram.pdf
 
 ## Generated if empty string is given at "Please type another file name for output:"
 
