--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,8 @@
 !Domain_model.pdf
 !sedes.pdf
 !Use_Case_Diagram.pdf
+!component_diagram_1.pdf
+!component_diagram_2.pdf
 
 ## Generated if empty string is given at "Please type another file name for output:"
 
