--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@
 !Use_Case_Diagram.pdf
 !component_diagram_1.pdf
 !component_diagram_2.pdf
+!result_arch.pdf
 
 ## Generated if empty string is given at "Please type another file name for output:"
 
